#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.63)
AC_INIT([daycode], [1.0], [liangpan180@163.com])
#AC_CONFIG_SRCDIR([config.h.in])
#AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([daycode], [1.0])

# Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL

# Checks for libraries.
#AC_CHECK_LIB([pthread])

# Checks for header files.
AC_CHECK_HEADER([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UINT32_T

# Checks for library functions.

AC_OUTPUT([Makefile
		src/Makefile
		test/Makefile
		common/Makefile
		])
